app_load_balancer.tf

resource "aws_lb" "web_app_lb" {
  name               = "web-app-load-balancer"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.load_balancer_sg.id]
  subnets            = tolist([for subnet in aws_subnet.public : subnet.id])
}

resource "aws_lb_target_group" "web_app_tg" {
  name     = "web-app-tg"
  port     = 8081
  protocol = "HTTP"
  vpc_id   = aws_vpc.csye6225_vpc.id

  health_check {
    path                = "/healthz"
    port                = "traffic-port" # Use the port defined in the target group
    protocol            = "HTTP"
    interval            = 30 # Health check interval in seconds
    timeout             = 5  # Timeout for each health check attempt
    healthy_threshold   = 2  # Number of successful checks to consider the target healthy
    unhealthy_threshold = 2  # Number of failed checks to consider the target unhealthy
  }
}

resource "aws_lb_listener" "http_listener" {
  load_balancer_arn = aws_lb.web_app_lb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.web_app_tg.arn
  }
}
# resource "aws_lb" "web_app_alb" {
#   name               = "web-app-alb"
#   internal           = false
#   load_balancer_type = "application"
#   security_groups    = [aws_security_group.load_balancer_sg.id]
#   subnets            = aws_subnet.public[*].id

#   enable_deletion_protection = false

#   tags = {
#     Name = "WebAppALB"
#   }
# }

# resource "aws_lb_target_group" "web_app_tg" {
#   name     = "web-app-tg"
#   port     = 8081
#   protocol = "HTTP"
#   vpc_id   = aws_vpc.csye6225_vpc.id

#   health_check {
#     path                = "/healthz"
#     interval            = 30
#     timeout             = 5
#     healthy_threshold   = 2
#     unhealthy_threshold = 2
#     matcher             = "200"
#   }

#   tags = {
#     Name = "WebAppTargetGroup"
#   }
# }

# resource "aws_lb_listener" "web_app_listener" {
#   load_balancer_arn = aws_lb.web_app_alb.arn
#   port              = 80
#   protocol          = "HTTP"

#   default_action {
#     type             = "forward"
#     target_group_arn = aws_lb_target_group.web_app_tg.arn
#   }
# }
